tests/ui/const-generics/issues/issue-71169.full.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-71169.rs:5:43
   |
LL | fn foo<const LEN: usize, const DATA: [u8; LEN]>() {}
   |                                           ^^^ the type must not depend on the parameter `LEN`
   |
   = note: const parameters may not be used in the type of const parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0770`.
